@@ -10,6 +10,12 @@ ECHO.
 ECHO Installing SYSLINUX on %~d0, optionally with bootloader.
 ECHO.
 %~d0\liberte\boot\syslinux\syslinux.exe -i -m -a -d /liberte/boot/syslinux %~d0
+ECHO.
+
+ECHO Hiding %~d0\liberte and %~d0\otfe directories.
+IF NOT EXIST %~d0\otfe MKDIR %~d0\otfe
+ATTRIB +H %~d0\liberte
+ATTRIB +H %~d0\otfe
 
 GOTO end
 
