@@ -513,10 +513,10 @@ sinfo "Generating SYSLINUX configuration"
 rm    -f /boot/boot
 mkdir -p /boot/syslinux
 syslinux -v 2>&1 | cut -d' ' -f2 > /boot/syslinux/version
-cp -p /usr/share/syslinux/{syslinux.exe,{menu,chain,hdt,reboot}.c32,{isolinux,altmbr_c}.bin} /boot/syslinux/
-cp -p /usr/bin/syslinux /boot/syslinux/syslinux-x86
-cp -p /sbin/extlinux    /boot/syslinux/extlinux-x86
-cp -p /usr/bin/mtools   /boot/syslinux/mtools-x86
+cp -p /usr/share/syslinux/{syslinux.exe,{menu,chain,hdt,reboot}.c32,isolinux.bin} /boot/syslinux/
+tar cpjf /boot/syslinux/syslinux-x86.tbz \
+    -C /sbin extlinux -C /usr/share/syslinux altmbr_c.bin \
+    -C /usr/bin syslinux mtools mcopy mmove mattrib
 cp -p /usr/share/consolefonts/${consolefont}.gz /boot/syslinux/
 rm -f /boot/syslinux/${consolefont}
 gunzip /boot/syslinux/${consolefont}.gz
